# AMR_controller_SLAM

./: CMakeLists.txt  README.md  gen_lidar  generate_lidar_data.cpp  lidar_data.csv  main.cpp  scan2 .csv  scan3.csv  simulated_lidar.csv
Gazebo Simulation/: CMakeLists.txt
Gazebo Simulation/src/: main.cpp
include/: Odometry.hpp
lidarsdk/rplidar_sdk/app/ultra_simple/: Makefile  lidar_interface.cpp  lidar_interface.h  main.cpp
lidarsdk/rplidar_sdk/output/Linux/Release/: custom_baudrate  simple_grabber  ultra_simple
slam_project/: CMakeLists.txt  main.cpp
slam_project/Astar/: Astar.cpp  Astar.hpp
slam_project/Communication/: send.hpp
slam_project/EKF/: EKF.cpp  EKF.hpp
slam_project/icp/: ICPMatcher.cpp  ICPMatcher.hpp
slam_project/imu/: IMUReader.cpp  IMUReader.hpp
slam_project/lidar/: LidarReader.cpp  LidarReader.hpp
slam_project/mapping/: OccupancyGrid.cpp  OccupancyGrid.hpp
src/: Odometry.cpp  main.cpp
